fixed horizontal scroll and social icon

--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -1,9 +1,5 @@
 .nav {
 
-  &__list {
-
-  }
-
   &__item {
     text-align: center;
   }
