--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -1,8 +1,9 @@
 .page {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 
   &__body {
-
+    overflow-x: hidden;
   }
 
   &:has(.page__menu:target) {
